

                          avrtest NEWS
                          ============

* Support avrtest_strtold.                                       2025-05-27

* Support avrtest_frexpf/l, avrtest_fdimf/l, avrtest_modff/l.    2025-05-25

* Support mul, div and mod for int64_t and uint64_t.             2025-05-24

* Support avrtest_cmpl(), avrtest_ftol(), avrtest_ltof().        2025-05-23

* Support avrtest_prandf/l() to get pseudo-random                2025-05-17
  floating-point numbers.

* Support avrtest_strtof().                                      2025-05-17

* Support avrtest_log10f() and avrtest_log10l().                 2025-05-16

* Support -log=FILE for the LOG_XXX commands.                    2025-04-15

* Support -stdout=FILE, -stderr=FILE and -stdin=FILE.            2025-04-15

* Support mul, div and mod for int32_t and uint32_t.             2025-04-07

* Support float to fixed-point conversions.                      2025-04-06

* Support fixed-point to float conversions.                      2025-04-03

* Support avrtest_cmpf(), avrtest_utof(), avrtest_stof().        2025-04-03

* Support avrtest_cycles_call() for more precise measurement     2025-04-02
  of cycles consumed by a function call.

* Fixed wrong H flag computation in SUB and SUBI.                2025-03-03

* exit.o now sets stdin as a stream reading via                  2025-02-08
  avrtest_getchar().

* avrtest.h now works with -mint8.                               2024-06-12
  Notice that an -mint8 programm must be terminated with
  some abort flavour or with avrtest_exit.  Returning from
  main or using [__builtin_]exit will only return an 8-bit
  value, but the library functions are expecting a 16-bit
  exit value.

* Support syscalls LOG_FMT_F7T etc. to log libgcc's              2024-06-10
  internal IEEE double representation.

* Support syscalls like                                    r339  2023-11-14

      long double avrtest_sinl (long double);